--- a/projects/src/components/ToDoApp/index.css
+++ b/projects/src/components/ToDoApp/index.css
@@ -1,61 +1,92 @@
-.todo-container{
- display: flex;
- flex-direction: column;
- justify-content: center;
- align-items: center;
+header h1 {
+  font-family: "Courier New", Courier, monospace;
+  justify-self: center;
 }
-.date-time{
- color: #F4EBD3;
-
+.todo-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.date-time {
+  color: #f4ebd3;
+  font-size: medium;
+  font-family: "Courier New", Courier, monospace;
 }
 .unorderList {
+  margin: 0px;
+}
+.todo-input {
+  padding: 0px 10px;
+  height: 50px;
+  border-radius: 40px 0px 0px 40px;
+  background-color: #f4ebd3;
+  border: none;
+  font-family: "Courier New", Courier, monospace;
+}
+.todo-btn {
+  height: 50px;
+  border-radius: 0px 20px 20px 0px;
+  background-color: #98a1bc;
+  border: none;
+  font-family: "Courier New", Courier, monospace;
+}
 
+.Form-box {
+  display: flex;
 }
-.todo-input{
-    padding: 0px;
-height: 50px;
-border-radius:  40px 0px  0px 40px;
-background-color: #F4EBD3;
-border: none;
+form {
+  display: flex;
+}
+.clear-btn {
+  border: none;
+  background-color: #ded3c4;
+  border-radius: 20px;
+  width: 100px;
+  height: 30px;
+  font-family: "Courier New", Courier, monospace;
+}
+.todo-item {
+  height: 40px;
+  background-color: #98a1bc;
+  border: none;
+  padding: 10px 20px 10px 20px;
+  list-style-type: none;
+  border-radius: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+.check-btn,
+.delete-btn {
+  border: none;
+  border-radius: 100%;
+  background-color: #ded3c4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+svg {
+  background-color: #ded3c4;
 }
-.todo-btn{
-  
- height: 50px;
-border-radius: 0px 20px 20px 0px;
-background-color:#98A1BC;
-border: none;
-
+.todo-item span {
+  background-color: #98a1bc;
+  font-family: "Courier New", Courier, monospace;
+ flex: 1; 
+  word-break: break-word; 
 }
-
-.Form-box{
- display: flex;
+.checkList {
+  text-decoration: line-through;
+  text-decoration-color: white;
 }
-form{
-  display: flex;  
+.notCheckList {
+  text-decoration: none;
 }
-.clear-btn{
-    border: none;
-    background-color: #DED3C4;
-    border-radius: 20px;
-    width: 100px;
-    height: 30px;
-
-}
-.todo-item{
-height: 40px;
-background-color:#98A1BC;
-border: none;
-padding: 5px;
- list-style-type: none;
- border-radius: 50px;
-}
-.check-btn{
-    border: none;
-}
-.delete-btn{
-    border: none;
-}
-.todo-item span{
-    
+.unorderList ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 0px;
 }
